updated user_chat page

--- a/views/user/items/user_chat.erb
+++ b/views/user/items/user_chat.erb
@@ -47,6 +47,15 @@
                         </div>
                     </div>
 
+                    <!-- Action Buttons -->
+                    <div class="d-grip gap-2">
+                        <button class="btn btn-outline-primary btn-sm">
+                            <i class="fas fa-store"></i> Visit Store 
+                        </button>
+                        <button class="btn btn-outline-danger btn-sm">
+                            <i class="fas fa-heart"></i> Follow 
+                        </button>
+                    </div>
                     
                 </div>
             </div>
