--- a/views/user/items/user_chat.erb
+++ b/views/user/items/user_chat.erb
@@ -56,7 +56,71 @@
                             <i class="fas fa-heart"></i> Follow 
                         </button>
                     </div>
-                    
+
+                    <!-- Store Product -->
+                     <div class="card">
+                        <div class="card-header">
+                            <h6 class="mb-0">PRODUK TOKO</h6>
+                        </div>
+                        <div class="card-body">
+                            <div class="row g-2">
+                                <% @store_items.each do |item| %>
+                                    <div class="col-6">
+                                        <div class="card product-card" onclick="shareProduct(<%= item['item_id'] %>)">
+                                            <% if item['item_photo'] %>
+                                                <img src="/uploads/items/<%= item['item_photo'] %>" class="card-img-top" style="height: 80px; object-fit: cover;" alt="<%= item['item_name'] %>">
+                                            <% else %>
+                                                <img src="/img/question.png" class="card-img-top" style="height: 80px; object-fit: cover;" alt="Product">
+                                            <% end %>
+                                            <div class="card-body p-2">
+                                                <small class="card-text d-block text-truncate">
+                                                    <%= item['item_name'] %>
+                                                </small>
+                                                <small class="text-danger fw-bold">
+                                                    <%= rupiah_currency(item['item_price']) %>
+                                                </small>
+                                            </div>
+                                        </div>
+                                    </div>
+                                <% end %>
+                            </div>
+                        </div>
+                     </div>
+                </div>
+
+                <!-- Chat Area -->
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header bg-light">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div>
+                                    <h5 class="mb-0">
+                                        Chat dengan <%= @store['store_name'] %>
+                                    </h5>
+                                    <small class="text-muted">Biasanya membalas dalam beberapa jam</small>
+                                </div>
+                                <div class="dropdown">
+                                    <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                                        <i class="fas fa-ellipsis-v"></i>
+                                    </button>
+                                    <ul class="dropdown-menu">
+                                        <li>
+                                            <a class="dropdown-item" href="#">
+                                                <i class="fas fa-ban"></i> Block
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="#">
+                                                <i class="fas fa-flag"></i> Report
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                        
+                    </div>
                 </div>
             </div>
          </div>
