--- a/views/seller/seller_chats/store_chat.erb
+++ b/views/seller/seller_chats/store_chat.erb
@@ -26,7 +26,7 @@
 
     <div class="row">
         <!-- Statiscs Cards -->
-         <div class="col-xl-3 col-md-6">
+        <div class="col-xl-3 col-md-6">
             <div class="card bg-primary text-white mb-4">
                 <div class="card-body">
                     <div class="d-flex justify-content-between">
@@ -44,7 +44,25 @@
                     </div>
                 </div>
             </div>
-         </div>
+        </div>
+
+        <div class="col-xl-3 col-md-6">
+            <div class="card bg-success text-white mb-4">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <div class="text-value-lg">
+                                <%= @stores.sum { |s| s['total_conversation'].to_i } %>
+                            </div>
+                            <div>Total Conversations</div>
+                        </div>
+                        <div class="align-self-center">
+                            <i class="fas fa-comments fa-2x"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </div>
